// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChannelBadge > renders dot + muted 1`] = `
<div>
  <div>
    <span
      aria-label="WhatsApp"
      class="inline-flex"
    >
      <span
        class="inline-block h-1.5 w-1.5 rounded-full bg-channel-whatsapp"
      />
    </span>
    <span
      aria-label="WhatsApp"
      class="inline-flex pointer-events-none opacity-40"
    >
      <span
        class="inline-flex items-center justify-center rounded-full bg-channel-whatsapp/15 text-channel-whatsapp h-8 w-8"
      >
        <svg
          class="lucide lucide-message-circle h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ChannelBadge > renders icon-only for each channel 1`] = `
<div>
  <div>
    <span
      aria-label="WhatsApp"
      class="inline-flex"
    >
      <span
        class="inline-flex items-center justify-center rounded-full bg-channel-whatsapp/15 text-channel-whatsapp h-8 w-8"
      >
        <svg
          class="lucide lucide-message-circle h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
          />
        </svg>
      </span>
    </span>
    <span
      aria-label="Messenger"
      class="inline-flex"
    >
      <span
        class="inline-flex items-center justify-center rounded-full bg-channel-messenger/15 text-channel-messenger h-8 w-8"
      >
        <svg
          class="lucide lucide-facebook h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
          />
        </svg>
      </span>
    </span>
    <span
      aria-label="Instagram"
      class="inline-flex"
    >
      <span
        class="inline-flex items-center justify-center rounded-full bg-channel-instagram/15 text-channel-instagram h-8 w-8"
      >
        <svg
          class="lucide lucide-instagram h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="20"
            rx="5"
            ry="5"
            width="20"
            x="2"
            y="2"
          />
          <path
            d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
          />
          <line
            x1="17.5"
            x2="17.51"
            y1="6.5"
            y2="6.5"
          />
        </svg>
      </span>
    </span>
    <span
      aria-label="SZ Chat"
      class="inline-flex"
    >
      <span
        class="inline-flex items-center justify-center rounded-full bg-channel-sz/15 text-channel-sz h-8 w-8"
      >
        <svg
          class="lucide lucide-headphones h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 14h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7a9 9 0 0 1 18 0v7a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`ChannelBadge > renders labeled variants 1`] = `
<div>
  <div>
    <span
      aria-label="WhatsApp"
      class="inline-flex"
    >
      <span
        class="inline-flex items-center gap-1.5 rounded-full px-2 py-0.5 bg-channel-whatsapp/15 text-channel-whatsapp"
      >
        <svg
          class="lucide lucide-message-circle h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
          />
        </svg>
        <span
          class="text-2xs font-medium"
        >
          WhatsApp
        </span>
      </span>
    </span>
    <span
      aria-label="Messenger"
      class="inline-flex"
    >
      <span
        class="inline-flex items-center gap-1.5 rounded-full px-2 py-0.5 bg-channel-messenger/15 text-channel-messenger"
      >
        <svg
          class="lucide lucide-facebook h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
          />
        </svg>
        <span
          class="text-2xs font-medium"
        >
          Messenger
        </span>
      </span>
    </span>
    <span
      aria-label="Instagram"
      class="inline-flex"
    >
      <span
        class="inline-flex items-center gap-1.5 rounded-full px-2 py-0.5 bg-channel-instagram/15 text-channel-instagram"
      >
        <svg
          class="lucide lucide-instagram h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="20"
            rx="5"
            ry="5"
            width="20"
            x="2"
            y="2"
          />
          <path
            d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
          />
          <line
            x1="17.5"
            x2="17.51"
            y1="6.5"
            y2="6.5"
          />
        </svg>
        <span
          class="text-2xs font-medium"
        >
          Instagram
        </span>
      </span>
    </span>
    <span
      aria-label="SZ Chat"
      class="inline-flex"
    >
      <span
        class="inline-flex items-center gap-1.5 rounded-full px-2 py-0.5 bg-channel-sz/15 text-channel-sz"
      >
        <svg
          class="lucide lucide-headphones h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 14h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7a9 9 0 0 1 18 0v7a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3"
          />
        </svg>
        <span
          class="text-2xs font-medium"
        >
          SZ Chat
        </span>
      </span>
    </span>
  </div>
</div>
`;
